# mathutils

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  MathUtils.h  README.md  TODO.rst  WIN_Generation.sh  WIN_Generation_MinGW.sh
cmake/: Add_Boost.cmake  Add_Eigen3.cmake  Add_Units.cmake  Add_boost.cmake  Add_googletest.cmake  Add_matplotlib-cpp.cmake  Add_units.cmake  FindMathUtils.cmake  MathUtilsConfig.cmake.in  URL.conf.cmake  git_watcher.cmake
docs/technical_notes/: Makefile  conf.py  index.rst
docs/technical_notes/Source/: Presentation.rst  Theory.rst
src/: Angles.h  CMakeLists.txt  Check.h  Complex.h  Constants.h  Convolution.h  FFT.h  Functions.h  Integration1d.h  Interp.h  Interp1d.h  Interp2d.h  LookupTable1D.h  LookupTable2D.h  Maths.h  Matrix.cpp  Matrix.h  Spline.h  StdVector.h  Transform3d.h  Unit.h  Vector2d.h  Vector3d.h  VectorGeneration.h  VectorN.h  Version.h
src/MathUtils/: Angles.h  BoostFunctions.h  CMakeLists.txt  ChebyshevApprox2d.h  ChebyshevApprox3d.h  ChebyshevSeries1d.h  ChebyshevSeries2d.h  ChebyshevSeries3d.h  ChebyshevSeriesApprox.h  ChebyshevToPowerSeries2d.h  Check.h  Constants.h  EigenDense.h  EigenInc.h  FFT.h  Functions.h  Geometry.h  Integrand.h  Integration1d.h  Integration2d.h  Integration2dTriangle.h  Interp.h  Interp1d.h  Interp2d.h  LookupTable1D.h  LookupTable2D.h  MathUtils.h  MathUtilsBoost.h  Maths.h  Matrix.h  Matrix33.h  Matrix66.h  Polynomial.h  PowerSeries1d.h  PowerSeries2d.h  PowerSeries3d.h  QuadratureTables.h  RegularGridInterpolator.h  RegularGridNearest.h  Unit.h  (+8 more)
src/mathutils/: CMakeLists.txt  Interp.h  Transform3d.h  Unit.h  Version.cpp
tests/: CMakeLists.txt  test_BoostFunctions.cpp  test_ChebyshevApproxDouble.cpp  test_ChebyshevApproxTriple.cpp  test_ChebyshevSeries1d.cpp  test_ChebyshevSeries2d.cpp  test_ChebyshevSeries3d.cpp  test_ChebyshevSeriesApprox.cpp  test_ChebyshevToPowerSeries2d.cpp  test_PowerSeries1d.cpp  test_PowerSeries2d.cpp  test_PowerSeries3d.cpp  test_angles.cpp  test_convolution.cpp  test_fft.cpp  test_functions.cpp  test_geometry.cpp  test_get_version.cpp  test_integration1d.cpp  test_integration2d.cpp  test_interp1d.cpp  test_interp2d.cpp  test_linear_system_solver.cpp  test_lookup_table.cpp  test_matrixMN.cpp  test_mkl.cpp  test_polynomial.cpp  test_regular_grid_interpolator.cpp  test_regular_nearest.cpp  test_spline.cpp  test_transform3d.cpp  test_unit.cpp  test_units.cpp  test_vector2d.cpp  test_vector3d.cpp  test_vectorN.cpp
